--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
             <version>11.0.0-M1</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>9.5.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
